# SipKipApp

./: .gitignore  .gitmodules  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: opus_jni.c
app/src/main/java/jermit/: io  protocol
app/src/main/res/drawable/: ic_beak_switch.xml  ic_blue_square_button.xml  ic_bt_settings_24dp.xml  ic_bt_settings_black_24dp.xml  ic_bt_settings_text_color_24dp.xml  ic_learn_black_24dp.xml  ic_music_black_24dp.xml  ic_note.xml  ic_notification_white_24dp.xml  ic_opus_text_color_24dp.xml  ic_play_black_24dp.xml  ic_preferences_black_24dp.xml  ic_purple_star_button.xml  ic_red_triangle_button.xml  ic_three_dot_menu_24dp.xml  ic_three_dot_menu_grey_24dp.xml  ic_unknown.xml  ic_unknown_grey.xml  ic_upload_text_color_24dp.xml  ic_yellow_heart_button.xml
app/src/main/res/drawable-v31/: side_nav_bar.xml
app/src/main/res/layout/: activity_find_device.xml  activity_previously_uploaded.xml  app_bar_find_device.xml  app_bar_main.xml  content_find_device.xml  content_main.xml  disk_usage_main.xml  fragment_find_device.xml  fragment_music.xml  fragment_play.xml  fragment_preferences.xml  item_music.xml  item_previously_uploaded.xml  material_slider_preference.xml  nav_header_main.xml
app/src/main/res/layout-w1240dp/: app_bar_main.xml  content_main.xml
app/src/main/res/layout-w600dp/: activity_find_device.xml  activity_previously_uploaded.xml  app_bar_main.xml  content_find_device.xml  content_main.xml  disk_usage_main.xml  fragment_find_device.xml  fragment_music.xml  item_music.xml  item_previously_uploaded.xml
app/src/main/res/menu/: bottom_navigation.xml  item_music_options.xml  navigation_drawer_find_device.xml  navigation_drawer_main.xml  overflow.xml
app/src/main/res/navigation/: mobile_navigation.xml  mobile_navigation_find_device.xml  mobile_navigation_main.xml
app/src/main/res/values/: colors.xml  (+6 more)
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-v31/: ic_launcher_background.xml  themes.xml
(+63 files in other folders)
